salesforce/main/default/objects/Opportunity/fields/Brand_Fan_Fit__c.field-meta.xml
<CustomField>
    <fullName>Brand_Fan_Fit__c</fullName>
    <label>Brand / Fan Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>높음</fullName>
            </value>
            <value>
                <fullName>보통</fullName>
            </value>
            <value>
                <fullName>낮음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>