salesforce/main/default/objects/Opportunity/fields/Client_Budget__c.field-meta.xml
<CustomField>
    <fullName>Client_Budget__c</fullName>
    <label>Client Budget</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>The approximate sponsorship budget available on the prospective sponsor's side, based on customer discussion or salesperson estimation. Not to be confused with Amount, which is our current expected Sponsorship Deal Value from Cloud Alpacas' side.</description>
</CustomField>