salesforce/main/default/objects/Opportunity/fields/Client_Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Budget_Status__c</fullName>
    <label>Client Budget Status</label>
    <type>Picklist</type>
    <description>This represents how well the prospective sponsor's available sponsorship budget has been identified. Not to be confused with Amount (current expected Sponsorship Deal Value) - this field tracks sponsor-side budget readiness/visibility.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Estimated</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>