salesforce/main/default/objects/Opportunity/fields/Customer_KPI__c.field-meta.xml
<CustomField>
    <fullName>Customer_KPI__c</fullName>
    <label>Customer KPI</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Discovery 단계에서 파악한, 고객이 이 파트너십의 성공을 판단하는 기준(KPI). 여러 개일 수 있어 자유 서술 Long Text로 관리하며 단일 picklist로 제한하지 않음.</description>
</CustomField>