salesforce/main/default/objects/Opportunity/fields/Decision_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Name__c</fullName>
    <label>Decision Maker</label>
    <length>120</length>
    <type>Text</type>
</CustomField>