salesforce/main/default/objects/Opportunity/fields/Expected_Benefit_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Expected_Benefit_Long_Term__c</fullName>
    <label>Expected Benefit - Long Term</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>