salesforce/main/default/objects/Opportunity/fields/Expected_Close_Window__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Window__c</fullName>
    <description>Qualification 단계에서 확인한 대략적인 예산 범위 (예: KRW 300M ~ 500M). 확정 금액은 표준 Amount 필드를 사용합니다.</description>
    <label>Estimated Budget</label>
    <length>60</length>
    <type>Text</type>
</CustomField>