salesforce/main/default/objects/Opportunity/fields/Interest_Direction__c.field-meta.xml
<CustomField>
    <fullName>Interest_Direction__c</fullName>
    <label>관심 방향</label>
    <length>255</length>
    <type>Text</type>
</CustomField>