salesforce/main/default/objects/Opportunity/fields/Key_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Key_Requirements__c</fullName>
    <label>Key Requirements</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Discovery 단계에서 파악한, Proposal/Quote에 반드시 반영해야 하는 고객 요구사항 또는 제약 조건.</description>
</CustomField>