salesforce/main/default/objects/Opportunity/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <label>Last Contact Date</label>
    <type>DateTime</type>
    <description>The date/time of the most recent qualifying Customer Contact (completed Call, Email, Online Meeting, or Offline Meeting) associated with this Opportunity. Generic Task completion and internal activity do not update this field. Automatically maintained by Flow - not intended for manual edit.</description>
</CustomField>