salesforce/main/default/objects/Opportunity/fields/Next_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity_Date__c</fullName>
    <label>Next Activity Date</label>
    <type>Date</type>
    <description>가장 가까운 예정된(미완료) Task의 기한일. Record-Triggered Flow(CA_Update_Opportunity_Next_Activity)가 자동으로 채웁니다.</description>
</CustomField>