salesforce/main/default/objects/Opportunity/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <label>Partner Tier</label>
    <type>Picklist</type>
    <description>개별 스폰서십 딜(Opportunity)의 등급. Account 자체의 등급이 아니라, 같은 Account라도 Opportunity마다 다를 수 있음 (예: Gold로 시작해서 갱신 시 Platinum으로 상향). 등급 자동판정 로직은 아직 없음 - 담당자가 직접 선택.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>