salesforce/main/default/objects/Opportunity/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <label>Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>