salesforce/main/default/objects/Opportunity/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <label>Email</label>
    <type>Text</type>
    <formula>SDO_Sales_Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <description>Primary Contact(SDO_Sales_Primary_Contact__c)의 Email을 자동으로 가져오는 formula 필드. Contact 레코드가 원본이며 여기서는 편집할 수 없습니다.</description>
</CustomField>