salesforce/main/default/objects/Opportunity/fields/Sponsorship_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Interest_Level__c</fullName>
    <label>Sponsorship 관심도</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>높음 (적극 검토 중)</fullName>
            </value>
            <value>
                <fullName>보통 (관심 있으나 미확정)</fullName>
            </value>
            <value>
                <fullName>낮음 (초기 탐색 단계)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>